fix removing date divider and showing it again, and dropdown not showing at the bottom

--- a/chat/fe/public/css/app.css
+++ b/chat/fe/public/css/app.css
@@ -14,11 +14,13 @@ body {
     max-width: 900px;
     margin: 0 auto;
     flex-grow: 1;
+    padding-bottom: 20px;
 }
 
 .textbox {
     background-color: #424242;
     text-align: center;
+    margin-top: -20px;
 }
 
 .textbox input {
